# mips-x

./: .gitignore  Makefile  README.md  code_45.txt  mkbootcode.sh  synthesis.ys  trace_code_45.txt
bootcode/: Makefile  build.sh  test1.S  test2.S  test3.S
mcgen/: Cargo.toml
mcgen/src/: gen.rs  main.rs
microcode/: decode.yaml  decode_alufunc.yaml  decode_control.yaml  decode_cp0.yaml  decode_regimm.yaml  signals.yaml
rtl/: config.v  list.txt  testbench.v
rtl/base/: core.v  delay.v  dm.v  prediction.v  regfile.v
rtl/memory/: dm.v  im.v  pipeline_decode.v
rtl/pipeline/: pipeline_alu.v  pipeline_bypass.v  pipeline_fetch.v  pipeline_latealu.v  pipeline_mem.v  pipeline_regfetch.v  pipeline_regwrite.v
